--- a/templates/empleados/empleados.html
+++ b/templates/empleados/empleados.html
@@ -41,9 +41,13 @@
             <td>
                 {% if empleado.activo == 1 %}
                     <a href="{% url "empleados:empleados_edit" empleado.id %}">Editar</a>
+                    {% if not request.user.is_superuser %}
                     <a href="{% url "empleados:empleados_delete" empleado.id %}">Borrar</a></td>
+                    {% endif %}
                     {% else %}
+                    {% if not request.user.is_superuser %}
                     <a href="{% url "empleados:empleados_delete" empleado.id %}">Activar</a></td>
+                    {% endif %}
                 {% endif %}
 
         </tr>
